[package]
name = "rel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.6"
neo4rs = "0.6.2"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
tempfile = "3"
dotenv = "0.15.0"